# jic

./: .gitignore  .style.yapf  pyproject.toml
exp/: alphas.py  flatten_lstm.py  ft_decoder.py  old_alphas.py  utils.py
exp/first/: intent_dict.pickle
jic/: alpha_models.py  data_loading.py  datasets.py  flatten_lstm.py  full_lstm.py  models.py
tests/: data_loading_test.py  datasets_test.py  import_test.py  models_test.py
